...
    android:layout_height="match_parent"
    android:paddingStart="@dimen/screen_gutter"
    android:paddingEnd="@dimen/screen_gutter"
    android:paddingBottom="@dimen/space_l">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip"
        style="@style/Widget.WinterArc.Button.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/dots"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toTopOf="@id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabBackground="@drawable/onboarding_dot"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabMaxWidth="20dp"
...
