...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:measureAllChildren="false">

            <include android:id="@+id/step_activity" layout="@layout/editor_step_activity" />
            <include android:id="@+id/step_mode" layout="@layout/editor_step_mode" />
            <include android:id="@+id/step_target" layout="@layout/editor_step_target" />
            <include android:id="@+id/step_details" layout="@layout/editor_step_details" />
            <include android:id="@+id/step_schedule" layout="@layout/editor_step_schedule" />
            <include android:id="@+id/step_review" layout="@layout/editor_step_review" />
        </ViewFlipper>
    </androidx.core.widget.NestedScrollView>

...
