...
                    app:boxCornerRadiusBottomStart="@dimen/radius_m"
                    app:boxCornerRadiusTopEnd="@dimen/radius_m"
                    app:boxCornerRadiusTopStart="@dimen/radius_m"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:autofillHints="phoneNational"
                        android:imeOptions="actionSend"
                        android:inputType="phone"
                        android:maxLength="20"
...
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:minHeight="@dimen/space_xxl" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:text="@string/signup_send_code" />

            <TextView
                android:id="@+id/consent"
...
